--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>The Lighttomb</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <script src="static/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <!--导航条-->
@@ -36,21 +37,22 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li><a href="#">登陆</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=7c0c6159bc49849470f8&redirect_uri=http://Localhost:8084/callback&scope=user&state=222">登陆</a></li>
                 <li class="dropdown">
+
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">我 <span class="caret"></span></a>
+
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">注销登陆</a></li>
                     </ul>
+
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
-<p th:text="'Hello, ' + ${name} + '!'" />
-</body>static/css/bootstrap-theme.min.css
+</body>
 </html>
