--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,11 +37,11 @@
 
             <ul class="nav navbar-nav navbar-right">
 
-                <li><a href="https://github.com/login/oauth/authorize?client_id=7c0c6159bc49849470f8&redirect_uri=http://Localhost:8084/callback&scope=user&state=222">登陆</a></li>
-                <li class="dropdown">
+
+                <li class="dropdown" th:if="${session.user!=null}">
 
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">我 <span class="caret"></span></a>
+                       aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
 
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
@@ -49,6 +49,10 @@
                         <li><a href="#">注销登陆</a></li>
                     </ul>
 
+                </li>
+
+                <li th:unless="${session.user!=null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=7c0c6159bc49849470f8&redirect_uri=http://Localhost:8084/callback&scope=user&state=222">登陆</a>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
