applied login persistence

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>The Lighttomb</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -14,19 +15,15 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">光墓</span>
             </button>
-
             <a class="navbar-brand" href="#">光墓</a>
-
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
             <form class="navbar-form navbar-left">
                 <div class="form-group">
                     <!--placeholder 搜索框默认提示-->
@@ -36,22 +33,17 @@
             </form>
 
             <ul class="nav navbar-nav navbar-right">
-
-
                 <li class="dropdown" th:if="${session.user!=null}">
-
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
-
+                       aria-expanded="false" th:text="${session.user.getUserName()}"> <span class="caret"></span></a>
+                    <a>登陆成功</a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">注销登陆</a></li>
                     </ul>
-
                 </li>
-
-                <li th:unless="${session.user!=null}">
+                <li th:if="${session.user== null}">
                     <a href="https://github.com/login/oauth/authorize?client_id=7c0c6159bc49849470f8&redirect_uri=http://Localhost:8084/callback&scope=user&state=222">登陆</a>
                 </li>
             </ul>
